fixed alignment issues

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -11,12 +11,19 @@
 	src: url('fonts/raleway_thin-webfont.ttf') format("truetype");
 }
 
+h1 {
+	margin: 0px;
+}
+p {
+	margin: 0px;
+}
 #title {
 	color: black;
+	opacity: .5;
 	height: 80vh;
-	width: 100vh;
 	margin: 0 auto;
 	font-size: 13vh; /* vh is according to viewport */
+	text-decoration: none;
 }
 
 #title a {
@@ -37,10 +44,10 @@ body {
 
 section {
 	margin: 0 auto;
-	width: 100%;
+	width: 100vh;
+	height: 100vh;
 }
 #projectsSection {
-	padding-bottom: 300px;
 	background-color: #87ddbe;
 }
 
@@ -48,7 +55,7 @@ section {
 	font-size: 10vh;
 	font-family:Raleway;
 	color: black;
-	margin-top: 10px; /* accounts for the extra space between projects and about */
+	
 }
 
 #aboutSection {
@@ -56,12 +63,10 @@ section {
 	background-color: #f9c3b6;
 	opacity: 1;
 	color: black;
-	padding-bottom: 300px;
-	
 }
 
 #aboutSection p {
-	font-size: 300%;
+	font-size: 5vh;
 	font-family: Raleway;
 	color: white;
 }
@@ -70,9 +75,21 @@ section {
 	font-size: 10vh;
 	font-family:Raleway;
 	color:white;
-	margin-bottom: 10px;
 }
 
+#contactSection {
+	color: white;
+	background-color: #e8917f;
+	height: auto;
+}
+
+#contactSection h1 {
+	font-size: 10vh;
+}
+
+#contactSection p {
+	font-size: 5vh;
+}
 /* sets the color, position, and style for the box*/
 #navigationBar {
 	position: fixed; 
